--- a/Resume.html
+++ b/Resume.html
@@ -5,10 +5,57 @@
   <meta name="description" content="Resume Of Satyendra Kumar Sharma">
   <meta name="author" content="Satyendra Kumar Sharma">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
- </head>
- <body>
-     <nav >
+  
+  
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 
+
+  
+  <style>
+
+   #img{
+        float: left;
+        
+   }
+   .mid{
+         border-width: 5px 5px 5px 5px; 
+         boeder-style: solid;
+         background-color: #DCDCDC;
+           }
+    .heading {
+    width:100%;
+    color:white;
+    background-color:#000;
+
+}
+  </style>
+ </head>
+ <body><div class = "col-sm-2"></div>
+     <div class = "col-sm-8 mid">
+     <center><h1> ------------------------------ Resume ------------------------------</h1></center><br><br>
+     <img src = "https://media.licdn.com/mpr/mpr/shrink_100_100/AAEAAQAAAAAAAAhiAAAAJDVhOTVlMzJjLTI0ZWYtNGFjNS1iMDE2LTAyY2ZkZGU2NTBhNw.jpg" alt = "Satyendra" height = "100px" width = "100px" id = "img">
+     &nbsp &nbsp &nbsp &nbsp <b>Satyendra Kumar Sharma &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp
+     &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp
+     &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp     Mob.No &nbsp :+91 8130518165 <br>
+     &nbsp &nbsp &nbsp &nbsp B.Tech Computer Science  &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp
+     &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp
+     &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp Email &nbsp &nbsp &nbsp  :sk258@snu.edu.in <br>
+     &nbsp &nbsp &nbsp &nbsp SHIV NADAR UNIVERSITY &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp
+     &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp
+     &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp Address :570/563 Viratnagar Alambagh Lucknow<br>
+        &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp
+     &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp
+     &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp
+     &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp
+     &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp 
+        Pin Code : 226005</b><br><br><h3 class = "heading">Education</h3><br>
+         <b>2014-18 &nbsp &nbsp &nbsp &nbsp B.Tech Computer Science at SHIV NADAR UNIVERSITY &nbsp &nbsp &nbsp &nbsp 6.01 CGPA<br>
+            2013 &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp 12th Senior Secondary Examination Uttar Pradesh Board   &nbsp &nbsp &nbsp 92.60%<br>
+            2011 &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp 10th Secondary Examination Uttar Pradesh Board   &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp  &nbsp &nbsp &nbsp 72.00%<br>
+     </div>
+     <body><div class = "col-sm-2"></div>
 
 
 
